# ciphershell

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  NOTICE  README.en.md  README.md  README.zh-CN.md
cmake/: FindQTermWidget.cmake
docs/: gm-compatibility-matrix.md  gui-acceptance-2026-04-29.md  interop-acceptance-2026-05-07.md  interop-template.md  package-acceptance-2026-04-29.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/releases/: SHA256SUMS-v0.1.1.txt  v0.1.0-rc1.md  v0.1.0-rc2.md  v0.1.0.md  v0.1.1.md  v0.1.1.zh-CN.md
engine/: README.md
resources/: gmssh.qrc
resources/icons/: gmssh.icns
resources/terminal/: terminal.html
resources/windows/: gmssh_client.rc.in
scripts/: build_legacy_ecgm_engine.sh  build_openssh_engine.sh  gm_handshake_regression.sh  openeuler_gm_sshd_debug.sh  p1_matrix_regression.sh  package_macos_app.sh  package_windows.ps1  test_windows_package.ps1  validate_windows_install.ps1
src/: main.cpp
src/core/: audit_logger.cpp  audit_logger.h  credential_store.cpp  credential_store.h  crypto_utils.cpp  crypto_utils.h  profile_repository.cpp  profile_repository.h  ssh_command_builder.cpp  ssh_command_builder.h  ssh_engine_adapter.cpp  ssh_engine_adapter.h  types.cpp  types.h
src/gui/: audit_log_view.cpp  audit_log_view.h  forwarding_panel.cpp  forwarding_panel.h  main_window.cpp  main_window.h  profile_editor.cpp  profile_editor.h  session_profile_dialog.cpp  session_profile_dialog.h  sftp_panel.cpp  sftp_panel.h  terminal_session_widget.cpp  terminal_session_widget.h
tests/: p1_matrix.cpp  test_core.cpp  test_sftp_panel.cpp
